@@ -1,0 +1,6 @@
+#include "Evil.h"
+
+EAPI void tzset(void)
+{
+   /* does nothing... */
+}
